@@ -63,6 +63,46 @@ use Test::More;
 # encourage use of these constants in tests
 use Glib qw(TRUE FALSE);
 
+
+# useful wrappers
+sub run_main (;&) {
+	my $callback = shift;
+	Glib::Idle->add (sub {
+		if ($callback) {
+			#print "# Entering run_main shutdown callback\n";
+			$callback->();
+			#print "# Leaving run_main shutdown callback\n";
+		}
+		Gtk2->main_quit;
+		FALSE;
+	});
+	#print "# Entering main loop (run_main)\n";
+	Gtk2->main;
+	#print "# Leaving main loop (run_main)\n";
+}
+sub ok_idle ($;$) {
+	my ($testsub, $test_name) = @_;
+	run_main {
+		# 0 Test::More::ok
+		# 1 this block's ok() call
+		# 2 idle callback in run_main
+		# 3 Gtk2::main call in run_main
+		# 4 Gtk2::main call in run_main (again)
+		# 5 ok_idle
+		# 6 the caller we want to print
+		local $Test::Builder::Level = 6;
+		ok ($testsub->(), $test_name);
+	}
+}
+sub is_idle ($$;$) {
+	my ($asub, $b, $test_name) = @_;
+	run_main {
+		local $Test::Builder::Level = 6; # see ok_idle()
+		is ($asub->(), $b, $test_name);
+	}
+}
+
+
 1;
 __END__
 
@@ -109,6 +149,44 @@ Simply skip all tests with the reason provided.
 
 =back
 
+=head1 "EXPORTED" FUNCTIONS
+
+This module also defines a few utility functions for use in tests; since
+we already override import and pull the dirty trick of calling use in
+the package main, these are defined in the package main rather than exported
+by Exporter.
+
+=over
+
+=item run_main
+
+=item run_main (CODEREF)
+
+=item run_main BLOCK
+
+Run a main loop, and stop when all pending events are handled.  This is
+useful if you have a test that needs a main loop to run properly, because
+it allows your program to remain noninteractive.  Important for a test
+suite.
+
+If the optional I<CODEREF> is supplied, it will be run right before killing
+the mainloop.  The function is prototyped to allow two styles of invocation:
+
+  run_main (\&some_sub);    # explicit code reference
+  run_main { print "hi" };  # callback as a block
+
+=item ok_idle (TEST_SUB [, TEST_NAME])
+
+Run Test::Simple's ok() on the return value of I<TEST_SUB> after handling
+pending events.  Implemented with C<run_main> and other special trickery.
+
+=item is_idle (THIS_SUB, THAT [, NAME])
+
+Like ok_idle(), but compares the return value of I<THIS_SUB> with I<THAT>
+using Test::More's is().
+
+=back
+
 =head1 SEE ALSO
 
 L<perl>(1), L<Gtk2>(3pm).
@@ -119,6 +197,6 @@ The Gtk2-Perl Team.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2003 by the gtk2-perl team.
+Copyright 2003-2005 by the gtk2-perl team.
 
 LGPL, See LICENSE file for more information.
