@@ -140,14 +140,9 @@ $selection -> selected_foreach(sub {
 
 ###############################################################################
 
-Glib::Idle -> add(sub {
-	Gtk2 -> main_quit();
-	return 0;
-});
-
-Gtk2 -> main();
+run_main;
 
 __END__
 
-Copyright (C) 2003 by the gtk2-perl team (see the file AUTHORS for the
+Copyright (C) 2003-2005 by the gtk2-perl team (see the file AUTHORS for the
 full list).  See LICENSE for more information.
