@@ -1,3 +1,11 @@
+2005/01/05 23:24 (-0400) muppetman
+
+	* pm/TestHelper.pm, t/00.Gtk2.t, t/01.GtkWindow.t,
+	t/GtkCellRenderer.t, t/GtkFileChooser.t, t/GtkIconView.t,
+	t/GtkListStore.t, t/GtkNotebook.t, t/GtkSimpleList.t,
+	t/GtkTreeSelection.t, t/GtkTreeView.t: add, document, and use
+	TestHelper functions run_main, ok_idle, and is_idle.
+
 2005/01/05 23:16 (-0400) muppetman
 
 	* xs/GtkItemFactory.xs: an important part of one of kaffee's last
